Fixed front page gallery overflow styles problem on mobiles

--- a/assets/scss/pages/_front-page.scss
+++ b/assets/scss/pages/_front-page.scss
@@ -393,7 +393,7 @@
       margin: 0 auto 24px;
 
       @include mq('<=tablet') {
-        grid-template-columns: repeat(2, minmax(200px, 1fr));
+        grid-template-columns: repeat(2, minmax(0, 1fr));
       }
       @include mq('<=phone') {
         grid-template-columns: 1fr;
